--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+/* Root config */
 :root {
     font-size: 62.5%;
 
@@ -18,21 +19,25 @@ body {
     align-items: center;
     justify-content: center;
     
+    margin: 0;
+    padding: 0;
 }
 
+/* #app config */
 #app {
     padding-top: 2rem;
     width: 65vw;
 }
 
+
+/* Header config */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1.8rem;
 
-    display: grid;
-    grid-template-areas: "first second";
+    
 }
 
 header img#logo {
@@ -80,6 +85,9 @@ header button#searchbtn {
 
 @media (max-width: 830px) {
     header {
+        display: grid;
+        grid-template-areas: "first second";
+        justify-content: center;
         text-align: center;
         grid-template-areas: "first" "second";
     }
